--- a/reportingTool/templates/reportingTool/details.html
+++ b/reportingTool/templates/reportingTool/details.html
@@ -1,4 +1,4 @@
-{% extends 'ToDo/base.html' %}
+{% extends 'reportingTool/base.html' %}
 
 {% block title %}
 <title>Details| Report Queries </title>
