--- a/reportingTool/templates/reportingTool/main.html
+++ b/reportingTool/templates/reportingTool/main.html
@@ -4,7 +4,25 @@
 {% endblock %}
 
 {% block content %}
-<script type="text/javascript">
+
+	<style type="text/css">
+		table.scroll {
+		    border-spacing: 0;
+		}
+
+		table.scroll tbody,
+		table.scroll thead { display: block; }
+
+		
+
+		table.scroll tbody {
+		    height: 600px;
+		}
+
+		tbody { border-top: 2px solid black; }
+	</style>
+	
+	<script type="text/javascript">
 		function run(){
 			document.getElementById('srt').value = document.getElementById('query-id').value;
 		}
@@ -51,7 +69,7 @@
 				<br>
 				<div class='tab-content'>
 					<div id='project' class='tab-pane fade in active'>
-						<table class='table'>
+						<table class='table table-striped'>
 							<thead>
 								<th class='row'>
 									<td> Project ID </td>
@@ -70,7 +88,7 @@
 						</table>
 					</div>
 					<div id='site' class='tab-pane fade'>
-						<table class='table table-fixed'>
+						<table class='table table-striped scroll'>
 							<thead>
 								<th class='row'>
 									<td> Site ID </td>
@@ -90,7 +108,7 @@
 						</table>
 					</div>
 					<div id='projExecTmStmp' class='tab-pane fade'>
-						<table class='table'>
+						<table class='table table-striped'>
 							<thead>
 								<th class='row'>
 									<td> TimeStamp ID </td>
@@ -111,7 +129,7 @@
 						</table>
 					</div>
 					<div id='siteReports' class='tab-pane fade'>
-						<table class='table'>
+						<table class='table table-striped'>
 							<thead>
 								<th class='row'>
 									<td> Report ID </td>
