--- a/reportingTool/templates/reportingTool/base.html
+++ b/reportingTool/templates/reportingTool/base.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
+
+<!DOCTYPE HTML>
 <html>
 <head>        
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -7,6 +9,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 	<link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
 	<style>
 		body{
 			min-height:100%;
