--- a/reportingTool/templates/reportingTool/people.html
+++ b/reportingTool/templates/reportingTool/people.html
@@ -3,7 +3,16 @@
 {% block content %}
 	{% load render_table from django_tables2 %}
 
-	<link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/themes/paleblue/css/screen.css" />
+	
+	<link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/bootstrap.css" />
+	
+	<div class='container'>
+		
+		<div class='row'>
+			<div class='col'>
+	 			{% render_table query "/home/Ash/gitRepos/CTSI-IT/reportingTool/templates/reportingTool/bootstrap.html" %}
+			</div>
+		</div>
 
-	 {% render_table query %}
+	</div>
 {% endblock %}
