--- a/reportingTool/templates/reportingTool/main.html
+++ b/reportingTool/templates/reportingTool/main.html
@@ -4,33 +4,13 @@
 {% endblock %}
 
 {% block content %}
-
+{% load static %}
 {% load render_table from django_tables2 %}
 
 <link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/bootstrap.css" />
 
-<style type="text/css">
-    table.scroll {
-        border-spacing: 0;
-    }
+<link rel="stylesheet" type='text/css' href="{% static 'reportingTool/main.css' %}" />
 
-    table.scroll tbody,
-    table.scroll thead { display: block; }
-
-
-
-    table.scroll tbody {
-        height: 600px;
-    }
-
-    tbody { border-top: 2px solid black; }
-</style>
-
-<script type="text/javascript">
-    function run(){
-        document.getElementById('srt').value = document.getElementById('query-id').value;
-    }
-</script>
 
 <div class='container'>
     <ul class='nav nav-pills nav-justified'>
@@ -53,32 +33,16 @@
     <br>
     <div class='tab-content'>
         <div id='project' class='tab-pane fade in active'>
-            <div class='row'>
-            <div class='col'>
-                {% render_table projects "/home/Ash/gitRepos/rcreporter/reportingTool/templates/reportingTool/bootstrap.html" %}
-            </div>
-        </div>
+            <iframe class='frame' src=" {% url 'reportingTool:project' %}"></iframe>
         </div>
         <div id='site' class='tab-pane fade'>
-            <div class='row'>
-            <div class='col'>
-                {% render_table sites "/home/Ash/gitRepos/rcreporter/reportingTool/templates/reportingTool/bootstrap.html" %}
-            </div>
-        </div>
+            <iframe src=" {% url 'reportingTool:site' %}"></iframe>
         </div>
         <div id='projExecTmStmp' class='tab-pane fade'>
-            <div class='row'>
-            <div class='col'>
-                {% render_table projExecs "/home/Ash/gitRepos/rcreporter/reportingTool/templates/reportingTool/bootstrap.html" %}
-            </div>
-        </div>
+            <iframe src=" {% url 'reportingTool:projExec' %}"></iframe>
         </div>
         <div id='siteReports' class='tab-pane fade'>            
-            <div class='row'>
-            <div class='col'>
-                {% render_table siteReports "/home/Ash/gitRepos/rcreporter/reportingTool/templates/reportingTool/bootstrap.html" %}
-            </div>
-        </div>
+            <iframe src=" {% url 'reportingTool:siteReport' %}"></iframe>
         </div>
         <div id='miscellaneous' class='tab-pane fade'>            
             <div class='row'>
@@ -87,6 +51,7 @@
                         {% csrf_token %}
                         <fieldset>
                             <span>Select a query from the Drop Down</span>
+                        </br>
                         </br>
                         <select name='query-name' id='query-id' class="form-control input-md" onchange="run()">
                             {% for txt,sql in queryObjects %}
@@ -102,14 +67,13 @@
                             <div class='col-sm-4'></div>
                         </div>
 
-                        <input type="text" id="srt" placeholder="get value on option select"><br>
                         </br>
                         </br>
                         </br>
                         </fieldset>
                     </form>
                 </div>
-        </div>
+            </div>
         </div>
     </div>
 </div>
