--- a/reportingTool/templates/reportingTool/people.html
+++ b/reportingTool/templates/reportingTool/people.html
@@ -7,10 +7,13 @@
 	<link rel="stylesheet" href="{{ STATIC_URL }}django_tables2/bootstrap.css" />
 	
 	<div class='container'>
+		<div class='page-header'>
+			<h2> Query Table </h2>
+		</div>
 		
 		<div class='row'>
 			<div class='col'>
-	 			{% render_table query "/home/Ash/gitRepos/rcreporter/reportingTool/templates/reportingTool/bootstrap.html" %}
+	 			{% render_table query "/Users/ashish/Documents/rcreporter/reportingTool/templates/reportingTool/bootstrap.html" %}
 			</div>
 		</div>
 
