--- a/reportingTool/templates/reportingTool/list.html
+++ b/reportingTool/templates/reportingTool/list.html
@@ -1,10 +1,12 @@
-{% extends 'reportingTool/base.html' %}
+
 {% load static %}
-{% block content %}
 
 <link rel='stylesheet' type='text/css'  href="{% static 'reportingTool/main.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'reportingTool/base.css' %}">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.css" rel="stylesheet" type="text/css"/>
 {% load render_table from django_tables2 %}
 
+<div class="container">
 	<style>
 		.helptext{
 			visibility: hidden;
@@ -32,4 +34,4 @@
 		 	</div>
 		</div>
 	{% endif %}
-{% endblock %}
+</div>
