--- a/reportingTool/templates/reportingTool/test.html
+++ b/reportingTool/templates/reportingTool/test.html
@@ -1,9 +1,10 @@
 	{% load render_table from django_tables2 %}
-
+{% load static %}
 	
 	<div class='container'>
 		<div class='page-header'>
 			<h2> Query Table </h2>
+			{% static %}
 		</div>
 		
 		<div class='row'>
