--- a/reportingTool/templates/reportingTool/list.html
+++ b/reportingTool/templates/reportingTool/list.html
@@ -1,9 +1,13 @@
-
+{% load chartit %}
 {% load static from staticfiles %}
 
 <link rel='stylesheet' type='text/css'  href="{% static 'reportingTool/main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'reportingTool/base.css' %}">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
 {% load render_table from django_tables2 %}
 
 <div class="container">
@@ -14,21 +18,14 @@
 	</style>
 
 	<form method='GET' >	
-			{% for field in filter.form %}
-				<div class="row" style="margin:0;">
-					<div class='col'>
-						<label class="control-label" for="id_{{ field.name }}">{{ field.label }}</label>
-					</div>
-					<div class='col'>
-						{{field}}    			
-					</div>
-				</div>
+			{% for field in filter.form %}				
+				<label class="control-label" for="id_{{ field.name }}">{{ field.label }}</label>
+				{{field}}    			
 			{% endfor %}
 		<br/>
 	    <input type='submit' class='btn btn-default' value='Filter' />
 	    <br/><br/>
 	    <p class='text-muted'>Displaying {{ filter.qs.count }} of {{ filter.queryset.count }} items. </p>
-	    
 	    <a href='{{ request.path }}' >Clear</a>
 	</form>
 
@@ -40,5 +37,9 @@
 		    	
 		 	</div>
 		</div>
+	{% endif %}
+
+	{% if chart %}
+	 <div id='container'> {{ chart|load_charts:"container" }}</div>
 	{% endif %}
 </div>
