Added docStrings. Refactored code, removing test files

--- a/reportingTool/templates/reportingTool/base.html
+++ b/reportingTool/templates/reportingTool/base.html
@@ -1,3 +1,10 @@
+{% comment %}
+This template is used as a parent template and renders the main html rendering. 
+
+This template will be inherited by all the other templates to provide the same 
+look and feel for all the templates. 
+{% endcomment %}
+
 {% load static %}
 <html>
 <head>        
